--- a/infra/helmchart/Chart.yaml
+++ b/infra/helmchart/Chart.yaml
@@ -1,24 +1,31 @@
 apiVersion: v2
-name: my-tomorrows-app
-description: A Helm chart for Kubernetes
+name: app-umbrella-chart
+description: An umbrella Helm chart for deploying multiple applications across environments
 
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+# This is an umbrella chart that can be reused as a template for different applications
+# and environments. It supports:
+# - Multi-environment deployments (dev, staging, prod)
+# - Multiple applications with shared infrastructure patterns
+# - Consistent configuration management across environments
+# - Reusable templates with environment-specific values
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.2.0
 
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
+# This represents the version of the umbrella chart template
 # It is recommended to use it with quotes.
-appVersion: "1.0.0-SNAPSHOT"
+appVersion: "2.0.0"
+
+# Dependencies for sub-charts (can be added as needed)
+# dependencies:
+#   - name: monitoring
+#     version: "1.0.0"
+#     repository: "file://./charts/monitoring"
+#     condition: monitoring.enabled
+#   - name: ingress-nginx
+#     version: "4.0.0"
+#     repository: "https://kubernetes.github.io/ingress-nginx"
+#     condition: ingress.nginx.enabled
