--- a/infra/helmchart/templates/configmap.yaml
+++ b/infra/helmchart/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "my-tomorrows-app.fullname" . }}-config
+  name: {{ include "app-umbrella-chart.fullname" . }}-config
   labels:
-    {{- include "my-tomorrows-app.labels" . | nindent 4 }}
+    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
 data:
   API_BASE_URL: {{ .Values.app.config.API_BASE_URL | quote }}
   LOG_LEVEL: {{ .Values.app.config.LOG_LEVEL | quote }}
