--- a/infra/helmchart/templates/ingress.yaml
+++ b/infra/helmchart/templates/ingress.yaml
@@ -2,9 +2,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "my-tomorrows-app.fullname" . }}
+  name: {{ include "app-umbrella-chart.fullname" . }}
   labels:
-    {{- include "my-tomorrows-app.labels" . | nindent 4 }}
+    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -35,7 +35,7 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "my-tomorrows-app.fullname" $ }}
+                name: {{ include "app-umbrella-chart.fullname" $ }}
                 port:
                   number: {{ $.Values.service.port }}
           {{- end }}
