--- a/infra/helmchart/templates/secret.yaml
+++ b/infra/helmchart/templates/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "my-tomorrows-app.fullname" . }}-secrets
+  name: {{ include "app-umbrella-chart.fullname" . }}-secrets
   labels:
-    {{- include "my-tomorrows-app.labels" . | nindent 4 }}
+    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
 type: Opaque
 data:
-  SECRET_KEY: {{ .Values.app.secrets.SECRET_KEY }}
-  DB_PASSWORD: {{ .Values.app.secrets.DB_PASSWORD }}
+  SECRET_KEY: {{ .Values.app.secrets.SECRET_KEY | b64enc | quote }}
+  DB_PASSWORD: {{ .Values.app.secrets.DB_PASSWORD | b64enc | quote }}
