--- a/infra/helmchart/templates/service.yaml
+++ b/infra/helmchart/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "my-tomorrows-app.fullname" . }}
+  name: {{ include "app-umbrella-chart.fullname" . }}
   labels:
-    {{- include "my-tomorrows-app.labels" . | nindent 4 }}
+    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -15,4 +15,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "my-tomorrows-app.selectorLabels" . | nindent 4 }}
+    {{- include "app-umbrella-chart.selectorLabels" . | nindent 4 }}
