--- a/infra/helmchart/templates/serviceaccount.yaml
+++ b/infra/helmchart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "my-tomorrows-app.serviceAccountName" . }}
+  name: {{ include "app-umbrella-chart.serviceAccountName" . }}
   labels:
-    {{- include "my-tomorrows-app.labels" . | nindent 4 }}
+    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
