--- a/infra/helmchart/templates/tests/test-connection.yaml
+++ b/infra/helmchart/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "my-tomorrows-app.fullname" . }}-test-connection"
+  name: "{{ include "app-umbrella-chart.fullname" . }}-test-connection"
   labels:
-    {{- include "my-tomorrows-app.labels" . | nindent 4 }}
+    {{- include "app-umbrella-chart.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "my-tomorrows-app.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "app-umbrella-chart.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
