--- a/infra/helmchart/values.yaml
+++ b/infra/helmchart/values.yaml
@@ -1,17 +1,34 @@
-# Default values for myTomorrows-app.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Default values for umbrella-chart.
+# This is a YAML-formatted file for reusable application deployments.
+# Override these values in environment-specific files (values-dev.yaml, values-prod.yaml)
 
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 3
+# Global configuration that applies to all applications
+global:
+  environment: "development"
+  registry: "docker.io"
+  imageTag: "latest"
+  namespace: "default"
 
-# This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
+# Namespace configuration
+namespace:
+  create: true
+  name: "default"
+  
+# Application-specific configuration
+application:
+  name: "default-app"
+  version: "1.0.0"
+  
+# This will set the replicaset count - can be overridden per environment
+replicaCount: 1  # Default for dev, override in prod values
+
+# This sets the container image configuration
 image:
-  repository: mytms
+  repository: "{{ .Values.global.registry }}/{{ .Values.application.name }}"
   # This sets the pull policy for images.
-  pullPolicy: Never
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0"
+  pullPolicy: "IfNotPresent"  # More appropriate for reusable chart
+  # Overrides the image tag whose default is the global imageTag.
+  tag: "{{ .Values.global.imageTag }}"
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -24,12 +41,58 @@ serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # Automatically mount a ServiceAccount's API credentials?
-  automount: true
+  automount: false  # Security: Disable automatic mounting of service account tokens
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
+
+# RBAC configuration
+rbac:
+  # Specifies whether RBAC resources should be created
+  create: true
+  # Rules for the ClusterRole or Role
+  rules:
+    # Add only the minimum required permissions
+    - apiGroups: [""]
+      resources: ["pods"]
+      verbs: ["get", "list"]
+    - apiGroups: [""]
+      resources: ["configmaps"]
+      verbs: ["get", "list"]
+
+# Network Policy configuration
+networkPolicy:
+  enabled: true
+  policyTypes:
+    - Ingress
+    - Egress
+  ingress:
+    # Allow traffic from ingress controller
+    - from:
+        - namespaceSelector:
+            matchLabels:
+              name: ingress-nginx
+        - podSelector:
+            matchLabels:
+              app.kubernetes.io/name: ingress-nginx
+      ports:
+        - protocol: TCP
+          port: 5000
+  egress:
+    # Allow DNS resolution
+    - to: []
+      ports:
+        - protocol: UDP
+          port: 53
+    # Allow HTTPS outbound for API calls
+    - to: []
+      ports:
+        - protocol: TCP
+          port: 443
+        - protocol: TCP
+          port: 80
 
 # This is for setting Kubernetes Annotations to a Pod.
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
@@ -38,16 +101,38 @@ podAnnotations: {}
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+# Pod Security Context - applies to the entire pod
+podSecurityContext:
+  runAsNonRoot: true
+  runAsUser: 10001
+  runAsGroup: 10001
+  fsGroup: 10001
+  fsGroupChangePolicy: "OnRootMismatch"
+  supplementalGroups: []
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+# Container Security Context - applies to individual containers
+securityContext:
+  allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
+  runAsNonRoot: true
+  runAsUser: 10001
+  runAsGroup: 10001
+  capabilities:
+    drop:
+      - ALL
+    add: []
+
+# Pod Security Standards
+podSecurityStandards:
+  enforce: "restricted"
+  audit: "restricted"
+  warn: "restricted"
+
+# Pod Disruption Budget
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1
+  # maxUnavailable: 1
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
@@ -66,7 +151,7 @@ ingress:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
   hosts:
-    - host: my-tomorrows-app.local
+    - host: default-app.local
       paths:
         - path: /
           pathType: Prefix
@@ -97,6 +182,13 @@ readinessProbe:
     port: 5000
   initialDelaySeconds: 5
   periodSeconds: 5
+startupProbe:
+  httpGet:
+    path: /health
+    port: 5000
+  initialDelaySeconds: 10
+  periodSeconds: 10
+  failureThreshold: 30  
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
@@ -144,4 +236,4 @@ app:
 # Namespace configuration
 namespace:
   create: false
-  name: my-tomorrows-app
+  name: default-app
